# private-animations

./: .gitignore  Cargo.toml  murali.toml
animation-plans/: kavriq-hidden-data-problem.md
dump/: delete.toml
dump/animation/: Cargo.toml  README.md
dump/animation/examples/: agentic_ai.rs  ch01_main.rs
dump/animation/examples/agentic_ai_code/: agent_vs_pipeline.rs  mod.rs
dump/samples/agent-definition/: Cargo.toml
dump/samples/flight-booking/: Cargo.toml
dump/samples/pdf-fapser-agent/: Cargo.toml
dump/samples/perlin/: Cargo.toml
dump/tutorial/python/: requirements.txt
dump/tutorial/rust/: Cargo.toml  README.md
dump/tutorial/rust/examples/anim-gradial-descent/: main.rs
dump/tutorial/rust/examples/anim-linear-regression-least-square/: main.rs
dump/tutorial/rust/examples/calculus/: main.rs
dump/tutorial/rust/examples/decision-trees/: main.rs
dump/tutorial/rust/examples/first-ml-lab/: main.rs
dump/tutorial/rust/examples/linear-algebra/: main.rs
dump/tutorial/rust/examples/linear-regression/: main.rs
dump/tutorial/rust/examples/logistic-regression/: main.rs
dump/tutorial/rust/examples/probability/: main.rs
dump/tutorial/rust/examples/rust-basics/: main.rs
dump/tutorial/rust/examples/setup/: main.rs
dump/tutorial/rust/examples/statistics/: main.rs
dump/tutorial/rust/examples/svm/: main.rs
examples/: agentic_start.rs  my_scene.rs  open-source-open-weights.rs
palettes/: ai.toml  brand.toml  layers.toml  sunset.toml
src/: main.rs
src/animations/: mod.rs  murali_ai_indicator.rs  murali_ai_orb.rs
src/animations/kavriq/: mod.rs
themes/: tt.toml
(+17 files in other folders)
